--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^17.0.2",
     "@capacitor/android": "5.7.0",
     "@capacitor/app": "5.0.7",
+    "@capacitor/browser": "^5.2.0",
     "@capacitor/core": "5.7.0",
     "@capacitor/haptics": "5.0.7",
     "@capacitor/keyboard": "5.0.8",
